# glsl-tutorial

./: CMakeLists.txt
00_Introduccion/: CMakeLists.txt  glsl-intro.c
